--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-<app-header *ngIf="this.authService.isAuthenticated()"></app-header>
-<router-outlet></router-outlet>
-<app-footer *ngIf="this.authService.isAuthenticated()"></app-footer>
+<div class="page-container">
+    <app-header *ngIf="this.authService.isAuthenticated()"></app-header>
+    <main>
+        <router-outlet></router-outlet>
+    </main>
+    <app-footer *ngIf="this.authService.isAuthenticated()"></app-footer>
+</div>
