--- a/src/app/pages/seller-login/seller-login.component.html
+++ b/src/app/pages/seller-login/seller-login.component.html
@@ -1,5 +1,6 @@
 <div class="container mt-3">
-    <h3> Vendedor</h3>
+    <h3>Inicio de sesion</h3>
+    <p>Ingrese su cuenta para poder realizar pedidos a los clientes</p>
     <form>   
         <div class="mb-3" >
           <label for="exampleInputEmail1" class="form-label">Email</label>
@@ -9,6 +10,6 @@
           <label for="exampleInputPassword1" class="form-label">Contraseña</label>
           <input type="password" class="form-control" id="exampleInputPassword1">
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary">Ingresar</button>
       </form>
 </div>
