--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer>
     <div class="container">
-        <p>footer works!</p>
+        <p class="text-center mt-2">Motolandia 2022</p>
     </div>
 </footer>
