--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,8 +2,16 @@
     min-height: 100vh;
     background-color: #eee;
     position: relative;
+    padding-bottom: 65px;
 }
 
 main {
     min-height: 100%;
+}
+
+.toast-container {
+    position: fixed;
+    top: 80px;
+    right: 0;
+    z-index: 999999;
 }
