--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -3,5 +3,7 @@ footer {
     background-color: #232323;
     color: #fff;
     bottom: 0;
-    width: 100vw;
+    left: 0;
+    right: 0;
+    height: 60px;
 }
