--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,74 +1,41 @@
-<!-- <header class="">
-    <nav class="navbar navbar-expand-lg">
-      <div class="container">
-        <div class="navbar-brand">
-            <a ><h2>Repuestos <em>Motos</em></h2></a>
-        </div>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" [routerLink]="['']">Productos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" [routerLink]="['carro']">Carro de compras</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" [routerLink]="['pedidos/listado']">Mis pedidos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" [routerLink]="['perfil']">Perfil</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link">Cerrar sesión</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-</header> -->
 <header>
-    <nav class="navbar navbar-expand-lg">
-        <div class="container">
-            <a class="navbar-brand" href="#"
-            ><h2>Repuestos <em>Motos</em></h2></a
-            >
-            <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
+  <nav class="navbar navbar-expand-lg">
+    <div class="container" [ngClass]="{'justify-content-center': !this.authService.isAuthenticated()}">
+      <a class="navbar-brand" href="#"
+        ><h2>Moto<em>Landia</em></h2></a
       >
-      <i class="bi bi-list"></i>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+        *ngIf="this.authService.isAuthenticated()"
+      >
+        <i class="bi bi-list"></i>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
+      <div class="collapse navbar-collapse" id="navbarNav" *ngIf="this.authService.isAuthenticated()">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-              <a class="nav-link" [routerLink]="['']">Productos</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" [routerLink]="['carro']">Carro de compras</a>
-            </li>
+            <a class="nav-link" [routerLink]="['']">Productos</a>
+          </li>
           <li class="nav-item">
-              <a class="nav-link" [routerLink]="['pedidos']"
-              >Mis pedidos</a
-              >
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" [routerLink]="['perfil']">Perfil</a>
-            </li>
-            <li class="nav-item">
+            <a class="nav-link" [routerLink]="['carro']">Carro de compras</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['pedidos']">Mis pedidos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['perfil']">Perfil</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link">Cerrar sesión</a>
-        </li>
-    </ul>
-</div>
-</div>
-</nav>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 </header>
-
 <div class="navbar-space"></div>
