--- a/src/styles.css
+++ b/src/styles.css
@@ -33,3 +33,7 @@
     -webkit-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.5);
     -moz-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.5);
 }
+
+.row-hover:hover {
+    background-color: rgb(243 63 63 / 10%);
+}
