--- a/src/app/pages/order-detail/order-detail.component.html
+++ b/src/app/pages/order-detail/order-detail.component.html
@@ -1,1 +1,104 @@
-<p>order-detail works!</p>
+<div class="container white-box-container mt-2">
+  <div class="row">
+    <div class="col-12">
+      <h2>Detalle de Pedido</h2>
+      <p>Aquí puede ver el detalle de su pedido.</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12">
+      <div class="container-fluid" *ngIf="this.order">
+        <div class="row">
+          <div class="d-none d-md-block col-md-2">
+            <h6>Id Pedido</h6>
+          </div>
+          <div class="d-none d-md-block col-md-2">
+            <h6>Fecha</h6>
+          </div>
+          <div class="d-none d-md-block col-md-3">
+            <h6 class="text-md-end">Importe Total</h6>
+          </div>
+          <div class="d-none d-md-block col-md-3 text-center">
+            <h6>Estado</h6>
+          </div>
+        </div>
+        <div class="row py-1 mt-1">
+          <div class="col-12 col-md-2">
+            <span class="d-md-none">Id Pedido: </span>
+            <strong>{{ this.order.orderId }}</strong>
+          </div>
+          <div class="col-12 col-md-2 d-flex justify-content-between d-md-block">
+            <span class="d-md-none">Fecha: </span>
+            <strong>{{ this.order.date | date: "dd/MM/yyyy" }}</strong>
+          </div>
+          <div class="col-12 col-md-3 text-md-end d-flex justify-content-between d-md-block">
+            <span class="d-md-none">Importe Total: </span>
+            <strong>{{ this.order.totalAmount | currency }}</strong>
+          </div>
+          <div class="col-12 col-md-3 text-md-center d-flex justify-content-between d-md-block">
+            <span class="d-md-none">Estado: </span>
+            <strong class="text-uppercase">{{ this.order.state }}</strong>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="container white-box-container mt-2">
+  <div class="row">
+    <div class="col-12">
+      <h5>Artículos incluídos</h5>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12">
+      <div class="container-fluid" *ngIf="this.order">
+        <div class="row">
+          <div class="d-none d-md-block col-md-1">
+            <h6>#</h6>
+          </div>
+          <div class="d-none d-md-block col-md-4">
+            <h6>Descripcion</h6>
+          </div>
+          <div class="d-none d-md-block col-md-2">
+            <h6 class="text-md-end">Cantidad</h6>
+          </div>
+          <div class="d-none d-md-block col-md-2">
+            <h6 class="text-md-end">Precio x unid.</h6>
+          </div>
+          <div class="d-none d-md-block col-md-3">
+            <h6 class="text-md-end">Total</h6>
+          </div>
+        </div>
+        <div 
+            class="row row-hover py-1 mt-1 order-item-borders"
+            *ngFor="let item of this.order.orderItems; let i = index"
+        >
+          <div class="col-8 col-md-1">
+            <span class="d-md-none">
+                #<strong>{{ i + 1 }} {{ item.description }}</strong>
+            </span>
+            <strong>{{ i + 1 }}</strong>
+          </div>
+          <div class="col-4 col-md-4">
+            <strong class="d-none d-md-block">{{ item.description }}</strong>
+            <div class="d-block d-md-none text-end">
+                <strong class="float-right">{{ item.totalAmount | currency }}</strong>
+            </div>
+          </div>
+          <div class="col-12 col-md-2 text-md-end">
+            <span class="d-md-none">Cantidad: </span>
+            <strong>{{ item.quantity }}</strong>
+          </div>
+          <div class="col-12 col-md-2 text-md-end">
+            <span class="d-md-none">Precio x Unidad: </span>
+            <strong>{{ item.unitPrice | currency }}</strong>
+          </div>
+          <div class="d-none d-md-block col-md-3 text-md-end">
+            <strong class="float-right">{{ item.totalAmount | currency }}</strong>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
