--- a/src/app/pages/orders-list/orders-list.component.html
+++ b/src/app/pages/orders-list/orders-list.component.html
@@ -1,1 +1,84 @@
-<p>orders-list works!</p>
+<div class="container white-box-container mt-2">
+  <div class="row mb-2">
+    <div class="col-12">
+      <h2>Listado de pedidos</h2>
+      <p>Estos son los pedidos que realizó hasta el momento.</p>
+    </div>
+    <div class="col-12">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="d-none d-sm-block col-sm-2">
+            <h6>Id Pedido</h6>
+          </div>
+          <div class="d-none d-sm-block col-sm-2">
+            <h6>Fecha</h6>
+          </div>
+          <div class="d-none d-sm-block col-sm-3">
+            <h6 class="text-sm-end">Importe Total</h6>
+          </div>
+          <div class="d-none d-sm-block col-sm-3 text-center">
+            <h6>Estado</h6>
+          </div>
+        </div>
+        <div
+          class="row row-hover py-1 mt-1 order-item-borders"
+          *ngFor="let o of this.currentPageContent"
+        >
+          <div class="col-12 col-sm-2">
+            <span class="d-sm-none">Id Pedido: </span>
+            <strong>{{ o.orderId }}</strong>
+          </div>
+          <div class="col-12 col-sm-2">
+            <span class="d-sm-none">Fecha: </span>
+            <strong>{{ o.date | date: "dd/MM/yyyy" }}</strong>
+          </div>
+          <div class="col-12 col-sm-3 text-sm-end">
+            <span class="d-sm-none">Importe Total: </span>
+            <strong>{{ o.totalAmount | currency }}</strong>
+          </div>
+          <div class="col-12 col-sm-3 text-sm-center">
+            <span class="d-sm-none">Estado: </span>
+            <strong class="text-uppercase">{{ o.state }}</strong>
+          </div>
+          <div class="col-12 col-sm-2 text-end d-none d-sm-block">
+            <button class="btn-red">Ver</button>
+          </div>
+          <button class="btn-red d-sm-none" [routerLink]="['/pedido', o.orderId]">Ver</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row" *ngIf="this.pages.length > 1">
+    <div class="col-12">
+      <nav aria-label="Páginas de lista de pedidos">
+        <ul class="pagination">
+          <li class="page-item" [ngClass]="{ disabled: this.firstPage() }">
+            <a
+              class="page-link"
+              aria-label="Anterior"
+              (click)="this.changePage(this.currentPage - 1)"
+            >
+              <span class="unselectable" aria-hidden="true">&laquo;</span>
+            </a>
+          </li>
+          <li
+            class="page-item"
+            *ngFor="let page of this.pages"
+            [ngClass]="{ active: this.isCurrentPage(page) }"
+          >
+            <a class="page-link unselectable" (click)="this.changePage(page)">{{ page }}</a>
+          </li>
+          <li class="page-item" [ngClass]="{ disabled: this.lastPage() }">
+            <a
+              class="page-link"
+              aria-label="Siguiente"
+              (click)="this.changePage(this.currentPage + 1)"
+            >
+              <span class="unselectable" aria-hidden="true">&raquo;</span>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </div>
+</div>
