--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,7 +6,22 @@
 }
 
 main {
+    position: relative;
     min-height: 100%;
+}
+
+.preloader-spiner {
+    overflow: hidden;
+    position: absolute;
+    z-index: 999999;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 .toast-container {
