--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -36,7 +36,7 @@
     </div>
     <div class="col-12 col-sm-6 col-md-4 col-lg-3">
       <div class="text-center">
-        <button class="btn btn-primary" (click)="this.login()">Ingresar</button>
+        <button class="btn btn-red" (click)="this.login()">Ingresar</button>
       </div>
     </div>
   </div>
