--- a/src/app/pages/products-list/products-list.component.html
+++ b/src/app/pages/products-list/products-list.component.html
@@ -1,15 +1,25 @@
 <div class="container products">
-  <div class="row">
-    <div class="filters">
-      <ul>
-        <li class="unselectable" [ngClass]="{'active': this.selectedCategory === null}" (click)="this.clearCategory()">Ver todos</li>
-        <li *ngFor="let c of this.productsCategories" class="unselectable" [ngClass]="{'active': this.selectedCategory?.name === c.name}" (click)="this.selectCategory(c)">
-          {{ c.name }}
-        </li>
-      </ul>
+  <div class="row" *ngIf="this.isSeller">
+    <div class="col-12 mt-3">
+      <select class="form-select" (change)="this.clientChangeSelection()" [(ngModel)]="this.selectedClientId">
+        <option value="-1" hidden selected>Seleccione un cliente</option>
+        <option *ngFor="let c of this.clientList" [value]="c.clientId">{{ c.name }}</option>
+      </select>
     </div>
   </div>
-  <div class="row mb-3">
+  <div class="row" >
+    <div class="col-12">
+      <div class="filters">
+        <ul>
+          <li class="unselectable" [ngClass]="{'active': this.selectedCategory === null}" (click)="this.clearCategory()">Ver todos</li>
+          <li *ngFor="let c of this.productsCategories" class="unselectable" [ngClass]="{'active': this.selectedCategory?.name === c.name}" (click)="this.selectCategory(c)">
+            {{ c.name }}
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="row mb-3" >
     <div *ngFor="let p of this.productList" class="col-lg-4 col-md-4 all des" [ngClass]="{'d-none': this.hideProduct(p)}">
       <app-product-item [product]="p"></app-product-item>
     </div>
