--- a/src/styles.css
+++ b/src/styles.css
@@ -19,9 +19,20 @@
 }
 
 .btn-red:hover {
+    background-color: #f33f3f;
+    border-color: #f33f3f;
+    border-radius: 5px;
+    color: white;
     -webkit-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
     box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
+}
+
+.btn-red:active {
+    background-color: #f33f3f;
+    border-color: #f33f3f;
+    border-radius: 5px;
+    color: white;
 }
 
 .white-box-container {
