--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -49,7 +49,8 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-12 text-end">
+            <div class="col-12 text-center text-sm-end">
+                <button class="btn-orange btn-confirm" (click)="this.cancelOrder()">Cancelar</button>
                 <button class="btn-red btn-confirm" (click)="this.confirmOrder()">Confirmar</button>
             </div>
         </div>
