--- a/src/styles.css
+++ b/src/styles.css
@@ -28,12 +28,40 @@
     box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
 }
 
-.btn-red:active {
+.btn-orange:active {
+    background-color: #DC5F00;
+    border-color: #DC5F00;
+    border-radius: 5px;
+    color: white;
+}
+
+.btn-orange {
+    background-color: #DC5F00;
+    border-color: #DC5F00;
+    border-radius: 5px;
+    color: white;
+    text-align: center;
+    font-weight: bold;
+    transition: all 0.3s;
+}
+
+.btn-orange:hover {
+    background-color: #DC5F00;
+    border-color: #DC5F00;
+    border-radius: 5px;
+    color: white;
+    -webkit-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
+}
+
+.btn-grey:active {
     background-color: #f33f3f;
     border-color: #f33f3f;
     border-radius: 5px;
     color: white;
 }
+
 
 .white-box-container {
     background-color: white;
@@ -47,4 +75,18 @@
 
 .row-hover:hover {
     background-color: rgb(243 63 63 / 10%);
+}
+
+/* Toast */
+ngb-toast {
+    margin-right: 10px;
+    margin-top: 10px;
+    box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.5)!important;
+    -webkit-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.5)!important;
+    -moz-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.5)!important;
+}
+
+.toast-header {
+    background-color: white;
+    opacity: 1;
 }
