--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -37,7 +37,14 @@
           </li>
         </ul>
       </div>
+      
     </div>
   </nav>
 </header>
-<div class="navbar-space"></div>
+<div class="navbar-space">
+  <div class="navbar-name">
+    <div class="container-fluid container-lg">
+      <span class="color-red me-3">{{ this.userName }}</span>
+    </div>
+  </div>
+</div>
