--- a/src/app/pages/products-list/products-list.component.css
+++ b/src/app/pages/products-list/products-list.component.css
@@ -30,3 +30,13 @@ ul {
 	list-style: none;
 	padding-left: 0;
 }
+
+.product-list-spinner {
+	position: absolute;
+	background-color: rgba(255, 255, 255, 0.3);
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	border-radius: 10px;
+}
