--- a/src/app/components/product-item/product-item.component.css
+++ b/src/app/components/product-item/product-item.component.css
@@ -22,6 +22,11 @@ ul {
 	width: 100%;
 }
 
+.down-content h3 {
+	font-size: 1.25rem;
+	font-weight: bold;
+}
+
 .product-item .image-container {
 	width: 100%;
 	height: 400px;
